log/build_2022-05-09_13-01-45/driving_swarm_sliding_tiles/stderr.log
  File "/home/roemi/driving_swarm_sliding_tiles/install/driving_swarm_sliding_tiles/lib/python3.8/site-packages/driving_swarm_sliding_tiles/planner.py", line 104
    self.nodes[]
               ^
SyntaxError: invalid syntax

